# ip-lectures

./: .gitignore  2023 lecture 0.md  2023 lecture 1.md  2023 lecture 2.md  2024_lecture2_FM.html  2024_lecture3_FM.html  2024_lecture4_FM.html  2024_lecture5_FM.html  2024_lecture_3.html  2024_lecture_3.md  2024_lecture_Digital.md  2024_lecture_FM 2.html  2024_lecture_FM.html  2024_lecture_FM.md  2024_lecture_FM.pptx  2024_lecture_FM_2.html  2024_lecture_FM_2.md  2024_lecture_FM_3.html  2024_lecture_FM_3.md  2024_lecture_FM_4.html  2024_lecture_FM_4.md  2024_lecture_FM_5.md  2024_lecture_PCM.html  2024_lecture_PCM.md  2024_lecture_digital.html  Competition.html  Competition.md  Competition1.html  Fourier Transform.rnote  GTA_Award.md  GTA_awards.html  GTA_awards.pptx  PITCHME.md  Program  README.md  UESTC1005 Main Paper Solution.docx  address  age  array2D  array_example  (+91 more)
2023 Lectures/: LICENSE  components.d.ts  image.ppm  package-lock.json  package.json  vertical_grade.tex
2023 Scrap/: address.c  age.c  arrayc.c  (+27 more)
2024/src/lecture10/: CMakeLists.txt  bikes  bikes.c  input_dynamic.c  input_overflow.c  ip_address  ip_address.c  lexicographic_order.c  password  password.c  pointer_structure  pointer_structure.c  string_test.c  strtok_example.c  struct_sizeof.c
2024/src/lecture12/: CMakeLists.txt  average_score.c  int_linked_list.c  linked_list.h  ll_insert_example.c  pagoda.c  scores.txt  simple_file_read.c  summary_stats.c  test.txt
2024/src/lecture13/: CMakeLists.txt  double_linked_list.c  int_bsearch.c  linear_search.c  pointer_to_pointer.c  pointer_to_pointer_const.c  taikonauts.c
2024/src/lecture5/: CMakeLists.txt  infinite_loop_example.c  infinite_loop_example_for.c  prime_test.c  quiz_problem.c  table_of_cubes.c  tricky_increment.c  while_loop_example.c
(+163 files in other folders)
