cmake_minimum_required(VERSION 3.30)
project(lecture12 C)

set(CMAKE_C_STANDARD 11)

add_executable(simple_file_read simple_file_read.c)
add_executable(average_score average_score.c)
add_executable(pagoda pagoda.c)
add_executable(int_linked_list int_linked_list.c)
add_executable(ll_insert_example ll_insert_example.c)
