cmake_minimum_required(VERSION 3.30)
project(lecture13 C)

set(CMAKE_C_STANDARD 11)

add_executable(pointer_to_pointer pointer_to_pointer.c)
add_executable(pointer_to_pointer_const pointer_to_pointer_const.c)
add_executable(double_linked_list double_linked_list.c)
add_executable(int_bsearch int_bsearch.c)
add_executable(taikonauts taikonauts.c)
add_executable(linear_search linear_search.c)
